LIST OF CHANGES FOR NPG-QC PACKAGE

 - tag_sniff modified to load the whole tag table upfront
     revcomp matches now output in reverse video

release 64.0
 - composition-enabled autoqc objects storage
     schema changes
     DBIx binding updates
     script for back-filling foreign keys to composition table
 - bug fix on search_autoqc method
 - db composition creation via a factory method
 - db autoqc loader - unused 'update' option removed
 - db autoqc loader - will retry a transaction that failed because
     a db lock could not be aquired
 - saving a component with subset attribute value 'all' gives an error
 - npg_qc::autoqc::results::collection
     remove unused functionality;
     ensure existing methods work with objects that do not have id_run,
     position, etc
 - remove superfluous method call from a template
 - db query for tag_index NULL or NOT NULL: undef as a string
   might not give problems now, but will when all db records are
   linked to compositions
 - remove unused qc_chema property from TransferObjectFactory 
 - set explicit dist to precise in travis yml
 - simplify and optmise pool detection in the viewer
 - remove links to Clarity LIMs, generalise code for linking to LIMs
 - deleted VC (view-controller) part of the Clearpress npg_qc web server
 - index unq_seq_compos_rp for seq_component becomes unique

release 63.1
 - label fix for rna_seqc in SeqQC viewer
 - MySQL does not save correctly integers to float columns;
   change column definitions for rna_seqc

release 63.0
 - update script for deleting autoqc database results so that it
   can handle composition-based tables
 - remove attribute qc_report_dir from check object: the output directory
   is created by default using the sample's filename root
 - npg_qc::autoqc::qc_store - load rna_seqc results into new rna_seqc
   table in npg_qc database.
 - SeqQC:
   - added template for rna_seqc check with selected metrics shown
     in summary